# hellomicrobit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
bitmaps/: Cargo.toml
microbit_bitmaps/: Cargo.toml
microbit_bitmaps/src/: lib.rs
microbit_v1/: Cargo.toml
microbit_v1/src/: main.rs
microbit_v2/: Cargo.toml  install.sh  memory.x
microbit_v2/src/: main.rs
src/: bitmaps.rs  main.rs
