[package]

version = "0.1.0"
authors = ["Fredrik Simonsson <simson@thesimson.net>"]
edition = "2018"
license = "0BSD"
name = "hellomicrobit_v1"
readme = "README.md"

[dependencies]
microbit = "0.15.1"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
nb = "1.1.0"
nrf51-hal = "0.18.0"
tiny-led-matrix = "1.0.1"
panic-halt = "1.0.0"
microbit-bitmaps = {path = "../microbit_bitmaps/"}
embedded-hal ="1.0.0"


[profile.dev]
debug = true
codegen-units = 1

[profile.release]
debug = true
lto = true
opt-level = "s"
